<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.example.bookapp.presentation.features.addBook.eventlisteners.AddBookEventListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        tools:context=".presentation.features.addBook.AddBookFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookImageField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/enter_the_book_covers_as_url"
            app:errorIconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/titleTv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputBookImageField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookTitleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/enter_books_name"
            app:errorIconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/bookImageField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputBookTitleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/enter_a_brief_description"
            app:errorIconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/bookTitleField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputBookDescriptionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookDescriptionField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>